gccida/c1/extract_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2552:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2560:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v1 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2561:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2562:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
*( _WORD *)&recog_data_0.n_operands = 0; 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2563:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = 0; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2586:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_operands = n_operands; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2588:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "recog.c", 2139, "extract_insn"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2588:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "recog.c", 2139, "extract_insn"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2593:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2594:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_loc, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2595:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.constraints, 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2596:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_mode); 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2599:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = 1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2600:8: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v11 = *recog_data_0.constraints[0]; 
       ^~~~~~~~~~~~
       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2601:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( *recog_data_0.constraints[0] ) 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2603:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v12 = recog_data_0.constraints[0] + 1; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2608:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.n_alternatives = v13; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2618:8: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v15 = *recog_data_0.constraints[i]; 
       ^~~~~~~~~~~~
       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:2626:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_alternatives >= 31 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_insn/src/obj/recog.o] Error 1
